fixed ui issue on mobile

--- a/bshop/src/app/shopping/components/products/product-filter/product-filter.component.css
+++ b/bshop/src/app/shopping/components/products/product-filter/product-filter.component.css
@@ -1,3 +1,8 @@
-.sticky-top{
-    top: 80px;
+.sticky-top {
+  top: 80px;
+}
+
+.list-group-item {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
